--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
+    "@sentry/nextjs": "^9.40.0",
     "@tanstack/pacer": "^0.8.0",
     "@tanstack/query-sync-storage-persister": "^5.79.0",
     "@tanstack/react-query": "^5.79.0",
